bugfix: DEC-255: add overflow for post's text

--- a/projects/charon/src/app/hub/components/hub-post-card/hub-post-card.component.scss
+++ b/projects/charon/src/app/hub/components/hub-post-card/hub-post-card.component.scss
@@ -110,6 +110,7 @@ $hub-post-card--horizontal--image-width: 31%;
   color: $color-grey;
   margin: $grid-step 0;
   overflow: hidden;
+  overflow-wrap: anywhere;
 }
 
 .hub-post-card__footer {
